Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-07 02:15+0000\n"
+"POT-Creation-Date: 2021-11-09 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,14 +29,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:9
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:23
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:32
 #, no-wrap
 msgid "Type"
 msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:11
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:25
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:34
 #, no-wrap
 msgid "Default"
 msgstr "デフォルト"
@@ -55,19 +55,45 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:17
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:31
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:40
 #, no-wrap
 msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:22
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:25
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.reactive.mssql.ssl]]`link:#quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.reactive.mssql.ssl[quarkus.datasource.reactive.mssql.ssl]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether SSL/TLS is enabled.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:26
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:49
+#, no-wrap
+msgid "boolean"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:29
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:51
+#, no-wrap
+msgid "`false`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:31
 #, no-wrap
 msgid "[[quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:30
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:39
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size]]`link:#quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size[quarkus.datasource.\"datasource-name\".reactive.mssql.packet-size]`\n"
@@ -75,5 +101,17 @@ msgid ""
 "[.description]\n"
 "--\n"
 "The desired size (in bytes) for TDS packets.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:48
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.-datasource-name-.reactive.mssql.ssl]]`link:#quarkus-datasource-data-sources-reactive-mssql-config_quarkus.datasource.-datasource-name-.reactive.mssql.ssl[quarkus.datasource.\"datasource-name\".reactive.mssql.ssl]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether SSL/TLS is enabled.\n"
 "--"
 msgstr ""
