--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-11-04 02:23+0000\n"
+"POT-Creation-Date: 2021-11-09 02:21+0000\n"
 "PO-Revision-Date: 2021-05-12 14:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1206,7 +1206,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:671
-msgid "This secret key JWK will also need to be referred to with `smallrye.jwt.key.verify.location`.  `smallrye.jwt.verify.algorithm` should be set to `HS256`/`HS384`/`HS512`."
+msgid "This secret key JWK will also need to be referred to with `smallrye.jwt.verify.key.location`.  `smallrye.jwt.verify.algorithm` should be set to `HS256`/`HS384`/`HS512`."
 msgstr ""
 
 #. type: Title ===
