--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-20 02:19+0000\n"
+"POT-Creation-Date: 2021-11-09 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -100,7 +100,6 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc:38
 #: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc:47
-#: upstream/_generated-config/main/config/quarkus-kubernetes-service-binding-buildtime.adoc:56
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -125,7 +124,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The name of the service.\n"
+"The name of the service. When this is empty the key of the service is meant to be used as name.\n"
 "--"
 msgstr ""
 
