--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-20 02:22+0000\n"
+"POT-Creation-Date: 2021-11-09 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3251,7 +3251,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1209
-msgid "Quarkus supports binding services to applications via the link:https://github.com/k8s-service-bindings/spec[Service Binding Specification for Kubernetes].  Specifically Quarkus implements the link:https://github.com/k8s-service-bindings/spec#application-projection[Application Projection] part of the specification, thus allowing applications running in appropriately configured Kubernetes clusters to consume services (such as a Database or a Broker) without the need for user configuration."
+msgid "Quarkus supports binding services to applications via the link:https://github.com/k8s-service-bindings/spec[Service Binding Specification for Kubernetes].  Specifically Quarkus implements the link:https://github.com/k8s-service-bindings/spec#workload-projection[Workload Projection] part of the specification, thus allowing applications running in appropriately configured Kubernetes clusters to consume services (such as a Database or a Broker) without the need for user configuration."
 msgstr ""
 
 #. type: Plain text
@@ -3420,30 +3420,43 @@ msgid "The `quarkus-kubernetes-service-binding` extension provides a more compac
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1298
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1297
 #, no-wrap
 msgid ""
-"quarkus.kubernetes-service-binding.services.postgresDB.api-version=postgresql.baiju.dev/v1alpha1\n"
-"quarkus.kubernetes-service-binding.services.postgresDB.kind=Database\n"
-"quarkus.kubernetes-service-binding.services.postgresDB.name=db-demo\n"
+"quarkus.kubernetes-service-binding.services.db-demo.api-version=postgresql.baiju.dev/v1alpha1\n"
+"quarkus.kubernetes-service-binding.services.db-demo.kind=Database\n"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1302
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1301
 msgid "By adding the above configuration properties inside your `application.properties` the `quarkus-kubernetes` in cooperation with the `quarkus-kubernetes-service-binding` extension will generate the `ServiceBinding` for you.  And this is something that is meant to work regardles of the kubernets flavour you are using, so it's expected to also work for Openshift and Knative, without any additional action from the user."
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1304
-msgid "This feature has limited applicability, as currently there are not many operators / custom resources bindable by the Service Binding Operator."
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1303
+msgid "In the configuration above `db-demo` has a double role. It is used to correlate / group `api-version` and `kind` together, but it's also used as the `name` of the custom resource. The later can be overriden if needed. For example:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1309
+#, no-wrap
+msgid ""
+"quarkus.kubernetes-service-binding.services.db-demo.api-version=postgresql.baiju.dev/v1alpha1\n"
+"quarkus.kubernetes-service-binding.services.db-demo.kind=Database\n"
+"quarkus.kubernetes-service-binding.services.db-demo.name=my-db\n"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1306
-msgid "ALSO NOTE: Advanced, features (e.g. `ServiceBiniding` mappings) are not yet supported."
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1312
+msgid "Advanced, features (e.g. `ServiceBiniding` mappings) are not yet supported."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1314
+msgid "Here is the list of: link:https://github.com/redhat-developer/service-binding-operator#known-bindable-operators[Known bindable Operators]."
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1311
-msgid "For more details on how the discovery of the available properties works, please read the link:https://github.com/k8s-service-bindings/spec#application-projection[Application Projection] part of the Service Binding specification."
+#: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1319
+msgid "For more details on how the discovery of the available properties works, please read the link:https://github.com/k8s-service-bindings/spec#workload-projection[Workload Projection] part of the Service Binding specification."
 msgstr ""
