Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-22 02:25+0000\n"
+"POT-Creation-Date: 2021-11-10 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1943,7 +1943,7 @@ msgstr ""
 #: upstream/_versions/main/guides/cdi-reference.adoc:882
 #, no-wrap
 msgid ""
-"interface Service {\n"
+" interface Service {\n"
 "    String name();\n"
 " }\n"
 msgstr ""
@@ -1986,7 +1986,7 @@ msgstr ""
 #| "public class MyCoolService {\n"
 msgid ""
 " @ApplicationScoped\n"
-" class ServiceBar {\n"
+" class ServiceBar implements Service {\n"
 msgstr ""
 "@ApplicationScoped\n"
 "public class MyCoolService {\n"
@@ -2043,8 +2043,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    void printServiceName() {\n"
-"       // This will print \"bar\" if the property \"service.foo.enabled\" is set to \"false\"\n"
-"       // If \"service.foo.enabled\" is set to \"true\" then service.get() would result in AmbiguousResolutionException\n"
+"       // This will print \"bar\" if the property \"service.foo.enabled\" is NOT set to \"true\"\n"
+"       // If \"service.foo.enabled\" is set to \"true\" then service.get() would result in an AmbiguousResolutionException\n"
 "       System.out.println(service.get().name());\n"
 "    }\n"
 " }\n"
