--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-26 02:44+0000\n"
+"POT-Creation-Date: 2021-11-10 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Whether or not an health check is published in case the smallrye-health extension is present.\n"
+"Whether an health check is published in case the smallrye-health extension is present.\n"
 "--"
 msgstr ""
 
@@ -55,18 +55,32 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:17
 #: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:26
 #: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:35
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:44
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:20
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:29
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.auto-connector-attachment]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.auto-connector-attachment[quarkus.reactive-messaging.auto-connector-attachment]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether it should automatically configure the *connector* attribute of channels that don't have an upstream source (for incoming channels), or a downstream consumer (for outgoing channels). When enabled, it verifies that there is only a single connector on the classpath. In that case, it automatically associates the *orphans* channel to the connector, removing the need to add the `.connector` attribute in the application configuration.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:34
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.metrics.enabled]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.metrics.enabled[quarkus.reactive-messaging.metrics.enabled]`\n"
@@ -78,14 +92,14 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:29
-#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:37
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:38
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:46
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:34
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging.adoc:43
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.strict]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.strict[quarkus.reactive-messaging.strict]`\n"
