--- a/l10n/po/ja_JP/_versions/main/guides/config-yaml.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-yaml.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-01 02:27+0000\n"
+"POT-Creation-Date: 2021-11-10 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -124,8 +124,8 @@ msgid ""
 "# REST Client configuration property\n"
 "quarkus:\n"
 "  rest-client:\n"
-"    org.acme.restclient.CountriesService:\n"
-"      url: https://restcountries.eu/rest\n"
+"    org.acme.rest.client.ExtensionsService:\n"
+"      url: https://stage.code.quarkus.io/api\n"
 msgstr ""
 "# REST Client configuration property\n"
 "org:\n"
