Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-application-application-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-application-application-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-11-12 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,6 +54,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-application-application-config.adoc:17
 #: upstream/_generated-config/main/config/quarkus-application-application-config.adoc:26
+#: upstream/_generated-config/main/config/quarkus-application-application-config.adoc:35
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -68,4 +69,22 @@ msgid ""
 "--\n"
 "The version of the application. If not set, defaults to the version of the project (except for tests where it is not set at all).\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-application-application-config.adoc:34
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-application-application-config_quarkus.application.ui-header]]`link:#quarkus-application-application-config_quarkus.application.ui-header[quarkus.application.ui-header]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The header to use for UI Screen (Swagger UI, GraphQL UI etc)\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-application-application-config.adoc:37
+#, no-wrap
+msgid "`{applicationName} {applicationVersion} (powered by Quarkus {quarkusVersion})`"
 msgstr ""
