--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-11-12 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,12 +56,31 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc:20
+#: upstream/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc:29
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc:22
+#: upstream/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc:23
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc:28
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-picocli-picocli-deployment-configuration_quarkus.picocli.disable-default-config-sources]]`link:#quarkus-picocli-picocli-deployment-configuration_quarkus.picocli.disable-default-config-sources[quarkus.picocli.disable-default-config-sources]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set this to `true` to disable reading configuration from the default Config Sources. This includes `application.properties` and `.env` files.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-picocli-picocli-deployment-configuration.adoc:31
+#, no-wrap
+msgid "`false`"
+msgstr ""
