--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-picocli.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-picocli.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-11-12 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,6 +56,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-picocli.adoc:20
+#: upstream/_generated-config/main/config/quarkus-picocli.adoc:29
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -70,6 +71,24 @@ msgstr "`true`"
 #: upstream/_generated-config/main/config/quarkus-picocli.adoc:28
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-picocli_quarkus.picocli.disable-default-config-sources]]`link:#quarkus-picocli_quarkus.picocli.disable-default-config-sources[quarkus.picocli.disable-default-config-sources]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set this to `true` to disable reading configuration from the default Config Sources. This includes `application.properties` and `.env` files.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-picocli.adoc:32
+#, no-wrap
+msgid "`false`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-picocli.adoc:37
+#, no-wrap
+msgid ""
 "[[quarkus-picocli_quarkus.picocli.top-command]]`link:#quarkus-picocli_quarkus.picocli.top-command[quarkus.picocli.top-command]`\n"
 "\n"
 "[.description]\n"
@@ -79,7 +98,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-picocli.adoc:29
+#: upstream/_generated-config/main/config/quarkus-picocli.adoc:38
 #, no-wrap
 msgid "string"
 msgstr "string"
