Add machine translation

--- a/l10n/po/ja_JP/_guides/security-jwt-build.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt-build.adoc.po
@@ -243,19 +243,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt-build.adoc:114
+#, fuzzy
 msgid "Alternatively you can use a `smallrye.jwt.new-token.signature-algorithm` property:"
-msgstr ""
+msgstr "あるいは、 `smallrye.jwt.new-token.signature-algorithm` の物件を利用することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt-build.adoc:118
+#, fuzzy
 msgid "```properties smallrye.jwt.new-token.signature-algorithm=PS256 ```"
-msgstr ""
+msgstr "<pre class=\"highlight\"> ``</pre>"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt-build.adoc:120
 #: upstream/_guides/security-jwt-build.adoc:182
+#, fuzzy
 msgid "and write a simpler API sequence:"
-msgstr ""
+msgstr "と、よりシンプルなAPIシーケンスを書くことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt-build.adoc:124
@@ -365,13 +368,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt-build.adoc:176
+#, fuzzy
 msgid "Alternatively, especially if the default `A256GCM` content encryption algorithm does not need to be changed, you can use a `smallrye.jwt.new-token.key-encryption-algorithm` property to customize a key encryption algorithm:"
-msgstr ""
+msgstr "また、特にデフォルトの `A256GCM` コンテンツの暗号化アルゴリズムを変更する必要がない場合は、 `smallrye.jwt.new-token.key-encryption-algorithm` プロパティを使用してキー暗号化アルゴリズムをカスタマイズすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt-build.adoc:180
+#, fuzzy
 msgid "```properties smallrye.jwt.new-token.key-encryption-algorithm=RSA-OAEP-256 ```"
-msgstr ""
+msgstr "<pre class=\"highlight\"> ``</pre>"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt-build.adoc:190
@@ -653,15 +658,15 @@ msgstr "smallrye.jwt.new-token.issuer"
 
 #. type: Table
 #: upstream/_guides/security-jwt-build.adoc:287
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "RS256"
-msgstr ""
+msgstr "RS256"
 
 #. type: Table
 #: upstream/_guides/security-jwt-build.adoc:288
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Signature algorithm. This property will be checked if the JWT signature builder has not already set the signature algorithm."
-msgstr ""
+msgstr "署名アルゴリズム。このプロパティは、JWT 署名ビルダがまだ署名アルゴリズムを設定していない場合にチェックされます。"
 
 #. type: Table
 #: upstream/_guides/security-jwt-build.adoc:288
@@ -671,15 +676,15 @@ msgstr "smallrye.jwt.new-token.audienc"
 
 #. type: Table
 #: upstream/_guides/security-jwt-build.adoc:288
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "RSA-OAEP"
-msgstr ""
+msgstr "RSA-OAEP"
 
 #. type: Table
 #: upstream/_guides/security-jwt-build.adoc:289
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Key encryption algorithm. This property will be checked if the JWT encryption builder has not already set the key encryption algorithm."
-msgstr ""
+msgstr "キー暗号化アルゴリズム。このプロパティは、JWT 暗号化ビルダーがキー暗号化アルゴリズムをまだ設定していない場合にチェックされます。"
 
 #. type: Table
 #: upstream/_guides/security-jwt-build.adoc:289
