--- a/l10n/po/ja_JP/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.4.2.Final released - Maintenance release'\n"
@@ -34,65 +34,82 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.4.2.Final released - Maintenance release'\n"
+"date: 2021-11-12\n"
+"tags: release\n"
+"synopsis: 2.4.2.Finalは、2.4リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:11
+#, fuzzy
 msgid "Today, we released Quarkus 2.4.2.Final, a maintenance release for our 2.4 release train containing bugfixes and documentation improvements."
-msgstr ""
+msgstr "本日、Quarkus 2.4.2.Finalをリリースしました。このリリースは、2.4リリーストレインのメンテナンスリリースで、バグフィックスとドキュメントの改善を含んでいます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:13
+#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.4."
-msgstr ""
+msgstr "すでに2.4をお使いの方も安心してアップグレードできます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:15
+#, fuzzy
 msgid "If you are not using 2.4 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.4[2.4 migration guide]."
-msgstr ""
+msgstr "すでに2.4を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.4[2.4移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Full changelog"
-msgstr ""
+msgstr "フルチェンジログ"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.4.2.Final[the full changelog of 2.4.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.4.2.Final[2.4.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:20
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "私たちと一緒に働きませんか？"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:23
+#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:25
+#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:27
+#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:28
+#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:29
+#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc:30
+#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
