--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -4,7 +4,7 @@ l10n/override/ja_JP/_layouts/insights.html, 2021-07-05 12:22:33 +0000, 2021-03-2
 l10n/override/ja_JP/_layouts/extensions.html, 2021-02-06 14:23:31 +0000, 2019-08-01 09:53:08 +0000, OK
 l10n/override/ja_JP/_layouts/quarkus2.html, 2021-07-02 14:02:40 +0000, 2021-07-02 14:00:45 +0000, OK
 l10n/override/ja_JP/_layouts/awards.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:27:19 +0000, OK
-l10n/override/ja_JP/_includes/header-navigation.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:32:46 +0000, OK
+l10n/override/ja_JP/_includes/header-navigation.html, 2021-02-06 14:23:31 +0000, 2021-11-12 12:38:27 +0000, NG
 l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html, 2021-06-20 14:25:59 +0000, 2021-06-04 09:19:39 +0000, OK
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/_data/projectfooter.yaml, 2021-03-31 12:13:25 +0000, 2021-03-15 14:11:26 +0000, OK
