--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,8 +1,10 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-11-11-quarkus-newsletter-14.adoc.po, 0, 6, 0, 158 ,100%
 l10n/po/ja_JP/_posts/2021-11-03-quarkus-2-4-1-final-released.adoc.po, 0, 14, 0, 153 ,100%
 l10n/po/ja_JP/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc.po, 0, 31, 0, 501 ,100%
 l10n/po/ja_JP/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc.po, 0, 22, 0, 215 ,100%
 l10n/po/ja_JP/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc.po, 0, 14, 0, 153 ,100%
+l10n/po/ja_JP/_posts/2021-10-18-quarkus-newsletter-13.adoc.po, 0, 6, 0, 183 ,100%
 l10n/po/ja_JP/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc.po, 0, 28, 0, 464 ,100%
 l10n/po/ja_JP/_posts/2021-09-23-unused-beans.adoc.po, 0, 26, 0, 698 ,100%
 l10n/po/ja_JP/_posts/2021-09-20-logicdrop-customer-story.adoc.po, 0, 99, 0, 1435 ,100%
