--- a/l10n/po/ja_JP/_posts/2021-11-11-quarkus-newsletter-14.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-11-11-quarkus-newsletter-14.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-11-11-quarkus-newsletter-14.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-11-quarkus-newsletter-14.adoc:9
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #14 - November'\n"
@@ -35,23 +35,35 @@ msgid ""
 "bibquery: [\"pub.urldate > '2021-10-19'\", \"pub.urldate <= '2021-11-10'\"]\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: クォークス・ニュースレター#14-11月号」のご案内\n"
+"date: 2021-11-11\n"
+"tags: newsletter\n"
+"synopsis: Quarkusとその周辺の最新のオンラインストーリー、記事、ビデオを提供します。\n"
+"author: jcobb\n"
+"bibquery: [\"pub.urldate > '2021-10-19'\", \"pub.urldate <= '2021-11-10'\"]\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-11-quarkus-newsletter-14.adoc:13
+#, fuzzy
 msgid "The November Newsletter has been published! This month, you can find articles about integration testing in Quarkus, how to use Quarkus and Google Cloud functions, as well as a piece about test-driven development with Quarkus."
-msgstr ""
+msgstr "11月のニュースレターが発行されました今月は、Quarkusでの統合テスト、QuarkusとGoogle Cloudの機能の使い方、さらにQuarkusでのテスト駆動開発に関する記事が掲載されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-11-quarkus-newsletter-14.adoc:15
+#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #14]!"
-msgstr ""
+msgstr "link:https://quarkus.io/newsletter/14/[ニュースレター第14号]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-11-quarkus-newsletter-14.adoc:17
+#, fuzzy
 msgid "Want to get newsletters in your inbox? https://quarkus.io/newsletter[Sign up for the newsletter] using the on page form."
-msgstr ""
+msgstr "ニュースレターを受信してみませんか？ページ上のフォームを使って link:https://quarkus.io/newsletter[ニュースレターに登録し]てください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-11-11-quarkus-newsletter-14.adoc:18
+#, fuzzy
 msgid "We've also included the list of the newest found online stories. Give it a read and if you feel something is missing or have an article coming out for future Quarkus Newsletter install the https://github.com/quarkusio/url2quarkuspub[bookmarklet] on your laptop and phone to easily submit a story. If you prefer the manual way please https://github.com/quarkusio/quarkusio.github.io/issues[open an issue] with a short description and a url."
-msgstr ""
+msgstr "また、最新のオンラインストーリーのリストも掲載されています。読んでみて、何か足りないと感じたり、今後のQuarkus Newsletterに掲載予定の記事がある場合は、ノートパソコンや携帯電話に link:https://github.com/quarkusio/url2quarkuspub[ブックマークレット]をインストールすると、簡単に記事を投稿することができます。手動での投稿をご希望の場合は、簡単な説明とURLを入力して link:https://github.com/quarkusio/quarkusio.github.io/issues[イシューを開い]てください。"
