Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-service-consumption.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-28 02:20+0000\n"
+"POT-Creation-Date: 2021-11-13 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -378,7 +378,7 @@ msgid ""
 "    @GET\n"
 "    public Multi<String> invokeSource() {\n"
 "        // Retrieve a stream\n"
-"        return client.source(Empty.newBuilder().build())\n"
+"        return streaming.source(Empty.newBuilder().build())\n"
 "                .onItem().transform(Item::getValue);\n"
 "    }\n"
 msgstr ""
@@ -394,7 +394,7 @@ msgid ""
 "        Multi<Item> inputs = Multi.createFrom().range(0, max)\n"
 "                .map(i -> Integer.toString(i))\n"
 "                .map(i -> Item.newBuilder().setValue(i).build());\n"
-"        return client.sink(inputs).onItem().ignore().andContinueWithNull();\n"
+"        return streaming.sink(inputs).onItem().ignore().andContinueWithNull();\n"
 "    }\n"
 msgstr ""
 
@@ -409,7 +409,7 @@ msgid ""
 "        Multi<Item> inputs = Multi.createFrom().range(0, max)\n"
 "                .map(i -> Integer.toString(i))\n"
 "                .map(i -> Item.newBuilder().setValue(i).build());\n"
-"        return client.pipe(inputs).onItem().transform(Item::getValue);\n"
+"        return streaming.pipe(inputs).onItem().transform(Item::getValue);\n"
 "    }\n"
 msgstr ""
 
