--- a/l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po
@@ -3,103 +3,92 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-06 08:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-11-14 20:33+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/liquibase-mongodb.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using Liquibase MongoDB"
 msgstr "Liquibase MongoDBの使用"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:14
-#, fuzzy
 msgid "https://www.liquibase.org/[Liquibase] is an open source tool for database schema change management, it allows managing MongoDB databases via it's https://github.com/liquibase/liquibase-mongodb[MongoDB Extension]."
 msgstr "link:https://www.liquibase.org/[Liquibase]は、データベースのスキーマ変更管理のためのオープンソースのツールで、 link:https://github.com/liquibase/liquibase-mongodb[MongoDB エクステンション]を通じて、MongoDB データベースを管理できます。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:16
-#, fuzzy
 msgid "Quarkus provides first class support for using Liquibase MongoDB Extension as will be explained in this guide."
-msgstr "Quarkusは、このガイドで説明されるように、Liquibase MongoDB Extensionを使用するためのファーストクラスのサポートを提供します。"
+msgstr "Quarkusは、このガイドで説明されるように、Liquibase MongoDB エクステンションを使用するためのファーストクラスのサポートを提供します。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase-mongodb.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:21
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
 msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:23
-#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
 msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:25
-#, fuzzy
 msgid "The solution is located in the `liquibase-mongodb-quickstart` {quickstarts-tree-url}/liquibase-mongodb-quickstart[directory]."
 msgstr "ソリューションは、 `liquibase-mongodb-quickstart` {quickstarts-tree-url}/liquibase-mongodb-quickstart[directory]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase-mongodb.adoc:26
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up support for Liquibase"
-msgstr "Liquibaseのサポートを設定する"
+msgstr "Liquibaseのサポートをセットアップする"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:29
-#, fuzzy
 msgid "To start using the Liquibase MongoDB Extension with your project, you just need to:"
-msgstr "Liquibase MongoDB Extension をあなたのプロジェクトで使い始めるには、以下が必要です。"
+msgstr "Liquibase MongoDB エクステンションをあなたのプロジェクトで使い始めるには、以下が必要です。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:31
-#, fuzzy
 msgid "add your changeLog to the `{change-log}` file as you usually do with Liquibase"
 msgstr "Liquibase で通常行っているように、changeLog を `{change-log}` ファイルに追加します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:33
-#, fuzzy
 msgid "activate the `migrate-at-start` option to migrate the schema automatically or inject the `Liquibase` object and run your migration as you normally do."
-msgstr "`migrate-at-start` オプションを有効にしてスキーマを自動的に移行するか、 `Liquibase` オブジェクトを注入して通常通り移行を実行します。"
+msgstr "`migrate-at-start` オプションを有効にしてスキーマを自動的にマイグレーションするか、 `Liquibase` オブジェクトを注入して通常通りマイグレーションを実行します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:35
-#, fuzzy
 msgid "In your `pom.xml`, add the following dependencies:"
-msgstr "`pom.xml` で、以下の依存関係を追加します。"
+msgstr "`pom.xml` で、以下の依存関係を追加します："
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:37
-#, fuzzy
 msgid "the Liquibase MongoDB extension"
-msgstr "Liquibase MongoDB 拡張機能"
+msgstr "Liquibase MongoDB エクステンション"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:38
-#, fuzzy
 msgid "the MongoDB client extension"
 msgstr "MongoDBクライアントエクステンション"
 
@@ -129,13 +118,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:60
-#, fuzzy
 msgid "Liquibase MongoDB extension support relies on the Quarkus MongoDB client config.  For the time being, it does not support multiple clients.  First, you need to add the MongoDB config to the `{config-file}` file in order to allow Liquibase to manage the schema."
-msgstr "LiquibaseのMongoDB拡張サポートは、QuarkusのMongoDBクライアント設定に依存しています。今のところ、複数のクライアントには対応していません。まず、Liquibase がスキーマを管理できるようにするために、MongoDB config を `{config-file}` ファイルに追加する必要があります。"
+msgstr "LiquibaseのMongoDBエクステンションサポートは、QuarkusのMongoDBクライアント設定に依存しています。今のところ、複数のクライアントには対応していません。まず、Liquibase がスキーマを管理できるようにするために、MongoDB config を `{config-file}` ファイルに追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:62
-#, fuzzy
 msgid "The following is an example for the `{config-file}` file:"
 msgstr "以下は、 `{config-file}` ファイルの例です。"
 
@@ -171,9 +158,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:83
-#, fuzzy
 msgid "Add a changeLog file to the default folder following the Liquibase naming conventions: `{change-log}` YAML, JSON and XML formats are supported for the changeLog."
-msgstr "Liquibase の命名規則に従って、デフォルトフォルダに変更ログファイルを追加します: `{change-log}` 変更ログには、YAML、JSON、XML 形式がサポートされています。"
+msgstr "Liquibase の命名規則に従って、デフォルトフォルダに変更ログファイルを追加します: `{change-log}` 変更ログは、YAML、JSON、XML 形式がサポートされています。"
 
 #. type: delimited block -
 #: upstream/_guides/liquibase-mongodb.adoc:93
@@ -224,27 +210,24 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:111
-#, fuzzy
 msgid "Now you can start your application and Quarkus will run the Liquibase's update method according to your config."
-msgstr "これで、アプリケーションを起動できるようになり、Quarkusは設定に従ってLiquibaseのアップデート方法を実行します。"
+msgstr "これで、アプリケーションを起動できるようになり、Quarkusは設定に従ってLiquibaseのアップデートメソッドを実行します。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase-mongodb.adoc:112
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using the Liquibase object"
 msgstr "Liquibaseオブジェクトの使用"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:115
-#, fuzzy
 msgid "In case you are interested in using the `Liquibase` object directly, you can inject it as follows:"
 msgstr "`Liquibase` オブジェクトを直接使用したい場合は、次のようにして注入します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:118
-#, fuzzy
 msgid "If you enabled the `quarkus.liquibase.migrate-at-start` property, by the time you use the Liquibase instance, Quarkus will already have run the migrate operation."
-msgstr "`quarkus.liquibase.migrate-at-start` プロパティを有効にした場合、Liquibase インスタンスを使用する時には、Quarkus はすでに移行操作を実行しています。"
+msgstr "`quarkus.liquibase.migrate-at-start` プロパティを有効にした場合、Liquibase インスタンスを使用する時には、Quarkus はすでにマイグレーション操作を実行しています。"
 
 #. type: delimited block -
 #: upstream/_guides/liquibase-mongodb.adoc:122
@@ -282,24 +265,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:142
-#, fuzzy
 msgid "Inject the LiquibaseFactory object"
 msgstr "LiquibaseFactory オブジェクトのインジェクション"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:143
-#, fuzzy
 msgid "Use the Liquibase instance directly"
-msgstr "Liquibaseのインスタンスを直接使用する"
+msgstr "Liquibaseのインスタンスの直接使用"
 
 #. type: Plain text
 #: upstream/_guides/liquibase-mongodb.adoc:144
-#, fuzzy
 msgid "List of applied or not applied liquibase ChangeSets"
-msgstr "適用された、または適用されていない液化ベースのChangeSetsのリスト"
+msgstr "適用された、または適用されていないliquibaseのChangeSetsのリスト"
 
 #. type: Title ==
 #: upstream/_guides/liquibase-mongodb.adoc:145
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuration Reference"
-msgstr "コンフィギュレーション・リファレンス"
+msgstr "設定リファレンス"
