Translate kafka-dev-services.adoc.po

--- a/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
@@ -3,163 +3,146 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-11-14 22:05+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kafka-dev-services.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Services for Kafka"
-msgstr "Kafkaのための開発サービス"
+msgstr "Kafka向けDev Services"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:13
-#, fuzzy
 msgid "If any Kafka-related extension is present (e.g. `quarkus-smallrye-reactive-messaging-kafka`), Dev Services for Kafka automatically starts a Kafka broker in dev mode and when running tests.  So, you don't have to start a broker manually.  The application is configured automatically."
-msgstr "Kafka関連の拡張機能（例： `quarkus-smallrye-reactive-messaging-kafka` ）が存在する場合、Dev Services for Kafkaは、開発モードやテストの実行時に自動的にKafkaブローカーを起動します。そのため、ブローカーを手動で起動する必要はありません。アプリケーションは自動的に構成されます。"
+msgstr "Kafka関連のエクステンション（例： `quarkus-smallrye-reactive-messaging-kafka` ）が存在する場合、Dev Services for Kafkaは、開発モードやテストの実行時に自動的にKafkaブローカーを起動します。そのため、ブローカーを手動で起動する必要はありません。アプリケーションは自動的に構成されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:15
-#, fuzzy
 msgid "Because starting a Kafka broker can be long, Dev Services for Kafka uses https://vectorized.io/redpanda[Redpanda], a Kafka compatible broker which starts in ~1 second."
 msgstr "Kafkaブローカーの起動には時間がかかるため、Dev Services for Kafkaでは、1秒程度で起動するKafka互換ブローカーの link:https://vectorized.io/redpanda[Redpanda]を使用しています。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Enabling / Disabling Dev Services for Kafka"
-msgstr "KafkaのDevサービスの有効化／無効化"
+msgstr "KafkaのDev Servicesの有効化／無効化"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:19
-#, fuzzy
 msgid "Dev Services for Kafka is automatically enabled unless:"
-msgstr "Dev Services for Kafkaが自動的に有効になります。"
+msgstr "以下の場合を除き、Dev Services for Kafkaが自動的に有効になります。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:21
-#, fuzzy
 msgid "`quarkus.kafka.devservices.enabled` is set to `false`"
-msgstr "`quarkus.kafka.devservices.enabled` が設定されています。 `false`"
+msgstr "`quarkus.kafka.devservices.enabled` が `false` に設定されている場合"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:22
-#, fuzzy
 msgid "the `kafka.bootstrap.servers` is configured"
-msgstr "`kafka.bootstrap.servers` の設定"
+msgstr "`kafka.bootstrap.servers` が設定されている場合"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:23
-#, fuzzy
 msgid "all the Reactive Messaging Kafka channels have the `bootstrap.servers` attribute set"
-msgstr "すべてのReactive Messaging Kafkaチャンネルには `bootstrap.servers` 属性が設定されています。"
+msgstr "すべてのReactive Messaging Kafkaチャンネルは `bootstrap.servers` 属性を設定します"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:27
-#, fuzzy
 msgid "Dev Services for Kafka relies on Docker to start the broker.  If your environment does not support Docker, you will need to start the broker manually, or connect to an already running broker.  You can configure the broker address using `kafka.bootstrap.servers`."
 msgstr "Dev Services for Kafkaでは、ブローカーの起動にDockerを使用しています。お使いの環境でDockerがサポートされていない場合は、ブローカーを手動で起動するか、すでに稼働しているブローカーに接続する必要があります。ブローカーのアドレスは、 `kafka.bootstrap.servers` を使用して設定できます。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Shared broker"
-msgstr "シェアード・ブローカー"
+msgstr "共有ブローカー"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:32
-#, fuzzy
 msgid "Most of the time you need to share the broker between applications.  Dev Services for Kafka implements a _service discovery_ mechanism for your multiple Quarkus applications running in _dev_ mode to share a single broker."
-msgstr "ほとんどの場合、アプリケーション間でブローカーを共有する必要があります。Dev Services for Kafkaは、 _開発_モードで動作する複数のQuarkusアプリケーションが1つのブローカーを共有するための _サービス発見_メカニズムを実装しています。"
+msgstr "ほとんどの場合、アプリケーション間でブローカーを共有する必要があります。Dev Services for Kafkaは、 _開発_ モードで動作する複数のQuarkusアプリケーションが1つのブローカーを共有するための _サービス発見_ メカニズムを実装しています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:34
-#, fuzzy
 msgid "Dev Services for Kafka starts the container with the `quarkus-dev-service-kafka` label which is used to identify the container."
-msgstr "Dev Services for Kafka は、コンテナを識別するために使用される `quarkus-dev-service-kafka` のラベルでコンテナを開始します。"
+msgstr "Kafka向けDev Services は、コンテナを識別するために使用される `quarkus-dev-service-kafka` のラベルでコンテナを開始します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:38
-#, fuzzy
 msgid "If you need multiple (shared) brokers, you can configure the `quarkus.kafka.devservices.service-name` attribute and indicate the broker name.  It looks for a container with the same value, or starts a new one if none can be found.  The default service name is `kafka`."
 msgstr "複数の（共有）ブローカーが必要な場合は、 `quarkus.kafka.devservices.service-name` 属性を設定し、ブローカー名を示します。同じ値のコンテナを探し、見つからない場合は新しいコンテナを開始します。デフォルトのサービス名は `kafka` です。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:41
-#, fuzzy
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.kafka.devservices.shared=false`."
-msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。共有を無効にするには、 `quarkus.kafka.devservices.shared=false`."
+msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.kafka.devservices.shared=false` で共有を無効に設定可能です。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:42
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting the port"
 msgstr "ポートの設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:46
-#, fuzzy
 msgid "By default, Dev Services for Kafka picks a random port and configures the application.  You can set the port by configuring the `quarkus.kafka.devservices.port` property."
-msgstr "デフォルトでは、Dev Services for Kafka はランダムなポートを選択してアプリケーションを構成します。ポートは、 `quarkus.kafka.devservices.port` プロパティを構成することで設定できます。"
+msgstr "デフォルトでは、Kafka向けDev Services はランダムなポートを選択してアプリケーションを構成します。ポートは、 `quarkus.kafka.devservices.port` プロパティを構成することで設定できます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:48
-#, fuzzy
 msgid "Note that the Kafka advertised address is automatically configured with the chosen port."
 msgstr "Kafkaのアドバタイズドアドレスは、選択したポートで自動的に設定されることに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring the image"
 msgstr "イメージの設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:53
-#, fuzzy
 msgid "Dev Services for Kafka uses: `vectorized/redpanda` images.  You can select any version from https://hub.docker.com/r/vectorized/redpanda:"
-msgstr "デフォルトでは、Dev Services for Kafkaは、 `vectorized/redpanda:latest` を使用します。 https://hub.docker.com/r/vectorized/redpanda  から任意のバージョンを選択することができます。"
+msgstr "デフォルトでは、Kafka向けDev Servicesは、 `vectorized/redpanda:latest` を使用します。 https://hub.docker.com/r/vectorized/redpanda から任意のバージョンを選択することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka-dev-services.adoc:57
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "quarkus.kafka.devservices.image-name=vectorized/redpanda:latest\n"
-msgstr "`quarkus.kafka.devservices.enabled` が設定されています。 `false`"
+msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:60
-#, fuzzy
 msgid "Dev Services for Kafka only support Redpanda."
-msgstr "Dev Services for KafkaはRedpandaのみ対応しています。"
+msgstr "Kafka向けDev ServicesはRedpandaのみ対応しています。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:61
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring Kafka topics"
-msgstr "イメージの設定"
+msgstr "Kafkaトピックの設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:65
-#, fuzzy
 msgid "You can configure the Dev Services for Kafka to create topics once the broker is started.  Topics are created with given number of partitions and 1 replica."
-msgstr "ブローカーの起動時にトピックを作成するように、Dev Services for Kafka を構成することができます。トピックは、指定された数のパーティションと1つのレプリカで作成されます。"
+msgstr "ブローカーの起動時にトピックを作成するように、Kafka向けDev Services を構成することができます。トピックは、指定された数のパーティションと1つのレプリカで作成されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:67
-#, fuzzy
 msgid "The following example creates a topic named `test` with 3 partitions, and a second topic named `messages` with 2 partitions."
 msgstr "次の例では、 `test` という名前のトピックを3つのパーティションで作成し、 `messages` という名前の2つ目のトピックを2つのパーティションで作成しています。"
 
@@ -173,12 +156,10 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:76
-#, fuzzy
 msgid "If a topic already exists with the given name, the creation is skipped, without trying to re-partition the existing topic to a different number of partitions."
-msgstr "指定された名前のトピックがすでに存在する場合、既存のトピックを異なる数のパーティションに再分割しようとはせず、作成をスキップします。"
+msgstr "指定された名前のトピックがすでに存在する場合、既存のトピックを異なる数のパーティションに再分割しようとはせず、作成はスキップされます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:77
-#, fuzzy
 msgid "You can configure timeout for Kafka admin client calls used in topic creation using `quarkus.kafka.devservices.topic-partitions-timeout`, it defaults to 2 seconds."
-msgstr "`quarkus.kafka.devservices.topic-partitions-timeout` を使用して、トピック作成時に使用される Kafka admin クライアントコールのタイムアウトを設定できます。デフォルトは 2 秒です。"
+msgstr "`quarkus.kafka.devservices.topic-partitions-timeout` を使用して、トピック作成時に使用される Kafka admin クライアント呼び出しのタイムアウトを設定できます。デフォルトは 2 秒です。"
