--- a/l10n/po/ja_JP/_posts/2021-10-18-quarkus-newsletter-13.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-10-18-quarkus-newsletter-13.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-12 15:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-11-15 14:39+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-18-quarkus-newsletter-13.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-18-quarkus-newsletter-13.adoc:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #13 - October'\n"
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: クォークス・ニュースレター第13号 10月号」より\n"
+"title: 'Quarkus Newsletter #13 - 10月号'\n"
 "date: 2021-10-19\n"
 "tags: newsletter\n"
 "synopsis: Quarkusとその周辺の最新のオンラインストーリー、記事、ビデオを提供します。\n"
@@ -46,24 +46,20 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-10-18-quarkus-newsletter-13.adoc:13
-#, fuzzy
 msgid "The October Newsletter has been published! This month, check out great articles to learn Quarkus Tips, Tricks and Techniques as well as Getting Started with Kubernetes-Native Java. Learn about Deploying a Quarkus GraalVM native application to IBM Cloud with GitOps. Read a great performance article for Building Native Java Apps with Quarkus and an article for Spring Developers:Kubernetes-native design patterns."
-msgstr "10月のニュースレターが発行されました。今月は、QuarkusのTips、Tricks、Techniqueを学べる素晴らしい記事や、Kubernetes-Native JavaのGetting Startedをご紹介します。Deploying a Quarkus GraalVM native application to IBM Cloud with GitOps」についてご紹介します。QuarkusでネイティブなJavaアプリを構築するためのパフォーマンスに関する記事や、Spring Developers:Kubernetes-nativeのデザインパターンに関する記事もご覧ください。"
+msgstr "10月のニュースレターが発行されました。今月は、Quarkusの豆知識、トリック、技術を学べる素晴らしい記事や、Kubernetes-Native Javaの入門をご紹介します。また、Quarkus GraalVM ネイティブアプリケーションをIBM CloudにGitOpsでデプロイする方法をご紹介します。QuarkusでネイティブなJavaアプリを構築するためのパフォーマンスに関する記事や、Spring Developers:Kubernetes-nativeのデザインパターンに関する記事もご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-18-quarkus-newsletter-13.adoc:15
-#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/13/[Newsletter #13]!"
-msgstr "link:https://quarkus.io/newsletter/13/[ニュースレター第13]号をご覧ください。"
+msgstr "link:https://quarkus.io/newsletter/13/[Newsletter #13]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-18-quarkus-newsletter-13.adoc:17
-#, fuzzy
 msgid "Want to get newsletters in your inbox? https://quarkus.io/newsletter[Sign up for the newsletter] using the on page form."
-msgstr "ニュースレターを受信してみませんか？ページ上のフォームを使って link:https://quarkus.io/newsletter[ニュースレターに登録し]てください。"
+msgstr "ニュースレターを受信してみませんか？ページ上のフォームを使って link:https://quarkus.io/newsletter[ニュースレターに登録] してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-18-quarkus-newsletter-13.adoc:18
-#, fuzzy
 msgid "We've also included the list of the newest found online stories. Give it a read and if you feel something is missing or have an article coming out for future Quarkus Newsletter install the https://github.com/quarkusio/url2quarkuspub[bookmarklet] on your laptop and phone to easily submit a story. If you prefer the manual way please https://github.com/quarkusio/quarkusio.github.io/issues[open an issue] with a short description and a url."
-msgstr "また、最新のオンラインストーリーのリストも掲載されています。読んでみて、何か足りないと感じたり、今後のQuarkus Newsletterに掲載予定の記事がある場合は、ノートパソコンや携帯電話に link:https://github.com/quarkusio/url2quarkuspub[ブックマークレット]をインストールすると、簡単に記事を投稿することができます。手動での投稿をご希望の場合は、簡単な説明とURLを入力して link:https://github.com/quarkusio/quarkusio.github.io/issues[イシューを開い]てください。"
+msgstr "また、最新のオンラインストーリーのリストも掲載されています。読んでみて、何か足りないと感じたり、今後のQuarkus Newsletterに掲載予定の記事がある場合は、ノートパソコンや携帯電話に link:https://github.com/quarkusio/url2quarkuspub[ブックマークレット]をインストールすると、簡単に記事を投稿することができます。手動での投稿をご希望の場合は、簡単な説明とURLを入力して link:https://github.com/quarkusio/quarkusio.github.io/issues[課題を開いて]ください。"
